[package]
name        = "bleep-telemetry"
version     = "0.1.0"
edition     = "2021"
authors     = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Telemetry and metrics collection for BLEEP blockchain."
license     = "MIT OR Apache-2.0"

[dependencies]
log          = "0.4"
chrono       = "0.4"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
time         = "0.3"
base64       = "0.21"

# NOTE: tch removed — energy_module.rs is NOT exposed in lib.rs.
# ark-groth16 / ark-ff removed — not used in any pub module.

[features]
default = []
ml = []   # future: re-enable tch in energy_module under this flag
