[package]
name = "bleep-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.36", features = ["full"] }
rayon = "1.8.0"

# WebAssembly
wasmer = "4.2.0"

# Logging and metrics
log = "0.4"
tracing = "0.1.40"
metrics = "0.21.1"

# Cryptography
sha2 = "0.10"
blake2 = "0.10"
blake3 = "1.5.0"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
hex = "0.4"
ed25519-dalek = { version = "1", features = ["std"] }
dashmap = "5.5.3"

# Blockchain & smart contracts
frame-support = "32.0.0"
frame-system = "32.0.0"
sp-runtime = "32.0.0"
ink = { version = "4.2.1", default-features = false, features = ["std"] }

# Consensus and networking
libp2p = { version = "0.53", features = ["tcp", "websocket", "noise", "yamux"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# ZKP and Circom
ark-circom = "0.5.0"
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"

# Post-quantum cryptography (assumed modules)
pqcrypto = "0.18.1"

# RocksDB for shard persistence
rocksdb = "0.21.0"

# Ethereum / EVM
ethers = { version = "2.0.10", features = ["abigen"] }


# Bitcoin
bitcoin = "0.30"

# Cosmos IBC (hypothetical SDK wrapper)


# Sui
sui-sdk = "0.0.0"  # Replace with actual or wrapper


# Machine Learning / AI
tch = "0.13.0"            # PyTorch for Rust
tensorflow = "0.21.0"     # For smart contract optimizer model
linfa = "0.7.1"           # Classical ML algorithms

# LRU cache
lru = "0.11.0"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }


# Errors
thiserror = "1.0"

# Finite Fields
ark-ff = "0.4.0"

[features]
default = ["std"]
std = ["ink/std", "frame-support/std", "frame-system/std", "sp-runtime/std"]

