[package]
name        = "bleep-vm"
version     = "0.5.0"
edition     = "2021"
authors     = ["BLEEP Core Team <bleepecosystem@gmail.com>"]
description = "BLEEP Universal VM — 7-layer intent-driven execution architecture with EVM (revm), WASM, ZK engines, unified gas model, cross-chain native routing, and state-diff isolation"
license     = "MIT OR Apache-2.0"

[lib]
name = "bleep_vm"
path = "src/lib.rs"

[dependencies]
# ── Async ──────────────────────────────────────────────────────────────────────
tokio        = { version = "1.36", features = ["full"] }
rayon        = "1.8"
futures      = "0.3"
async-trait  = "0.1"

# ── WebAssembly ────────────────────────────────────────────────────────────────
wasmer       = { version = "4.2", features = ["cranelift"] }
wasmparser   = "0.118"
wasm-encoder = "0.38"

# ── EVM (revm — production Ethereum-compatible runtime) ────────────────────────
revm         = { version = "3.5", features = ["serde"] }

# ── Serialization ─────────────────────────────────────────────────────────────
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
bincode      = "1.3"
hex          = "0.4"
base64       = "0.22"
bytes        = "1.5"

# ── Cryptography ──────────────────────────────────────────────────────────────
sha2         = "0.10"
sha3         = "0.10"
blake2       = "0.10"
blake3       = "1.5"
aes-gcm      = "0.10"
hkdf         = "0.12"
rand         = "0.8"
rand_core    = { version = "0.6", features = ["getrandom"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
zeroize      = { version = "1.7", features = ["zeroize_derive"] }
primitive-types = { version = "0.12", features = ["serde"] }

# ── Post-Quantum ──────────────────────────────────────────────────────────────
pqcrypto-sphincsplus = "0.7"
pqcrypto-kyber       = "0.8.0"
pqcrypto-traits      = "0.3"

# ── ZK Proofs (Groth16 / BN254) ───────────────────────────────────────────────
ark-groth16    = "0.4"
ark-bn254      = "0.4"
ark-ff         = "0.4"
ark-ec         = "0.4"
ark-std        = "0.4"
ark-serialize  = "0.4"
ark-relations  = "0.4"
ark-r1cs-std   = "0.4"
ark-snark      = "0.4"

# ── Data Structures ───────────────────────────────────────────────────────────
dashmap      = "5.5"
lru          = "0.12"
parking_lot  = "0.12"

# ── Logging / Metrics ─────────────────────────────────────────────────────────
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
metrics             = "0.21"

# ── Error Handling ────────────────────────────────────────────────────────────
thiserror    = "1.0"
anyhow       = "1.0"

# ── Utilities ─────────────────────────────────────────────────────────────────
chrono       = { version = "0.4", features = ["serde"] }
smallvec     = { version = "1.11", features = ["serde"] }
once_cell    = "1.18"
uuid         = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio        = { version = "1.36", features = ["full", "test-util"] }
tracing-test = "0.2"
criterion    = { version = "0.5", features = ["async_tokio"] }
tempfile     = "3"
