[package]
name = "bleep-wallet-core"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <your-email@example.com>"]
description = "BLEEP: Quantum-Secure, AI-Native, Self-Healing Blockchain Ecosystem"
license = "MIT"
repository = "https://github.com/your-repo/bleep"

[dependencies]
# Async and concurrency
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1.80"
pqcrypto-traits = "0.3.5"

# Logging and error handling
log = "0.4"
thiserror = "1.0"

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto (quantum, zk, AES, ed25519, etc.)
pqcrypto-kyber = "0.7.2"
pqcrypto-sphincsplus = "0.7.1"
aes-gcm = { version = "0.10", features = ["aes"] }
zeroize = "1.6"
ed25519-dalek = { version = "1", features = ["std"] }
blake3 = "1.5"
sha2 = "0.10"
blake2 = "0.10"


# HD Wallet and Mnemonic
bip39 = "2.0.1"
hdwallet = "0.4.1"

# Blockchain utilities
ethers = { version = "2.0.7", features = ["abigen"] }
bitcoin = "0.30"

# AI and ML with PyTorch
tch = { version = "0.13", features = ["download-libtorch"] }
linfa = { version = "0.7.1", features = ["serde"] }

# Database and storage
rocksdb = "0.21"

# Misc
hex = "0.4"
rand = "0.8"
rayon = "1.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Networking (optional if P2P is complex)
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "rustls-tls"] }


[features]
default = []
std = ["serde/std", "tokio/full"]

