[package]
name        = "bleep-wallet-core"
version     = "0.1.0"
edition     = "2021"
authors     = ["Muhammad Attahir <your-email@example.com>"]
description = "BLEEP: Quantum-Secure, AI-Native, Self-Healing Blockchain Ecosystem"
license     = "MIT"

[dependencies]
# Async
tokio        = { version = "1.37", features = ["full"] }
async-trait  = "0.1.80"

# Logging & errors
log          = "0.4"
thiserror    = "1.0"

# Serialisation
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
bincode      = "1.3"

# Post-quantum crypto
pqcrypto-traits      = "0.3.5"
pqcrypto-kyber       = "0.8.0"
pqcrypto-sphincsplus = "0.7.1"

# Classical crypto
aes-gcm      = { version = "0.10", features = ["aes"] }
zeroize      = "1.6"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
blake3       = "1.5"
sha2         = "0.10"
sha3         = "0.10"
blake2       = "0.10"

# HD Wallet / mnemonic
bip39        = "2.0.1"
hdwallet     = "0.4.1"

# Blockchain utilities (classical; ethers brought in for address handling)
ethers       = { version = "2.0.7", features = ["abigen"] }

# Storage
rocksdb      = "0.21"

# Misc
hex          = "0.4"
rand         = "0.8"
rayon        = "1.8"
uuid         = { version = "1", features = ["v4", "serde"] }
reqwest      = { version = "0.12", features = ["json", "stream", "gzip", "rustls-tls"] }

# NOTE: Removed for MVP:
#   tch    — LibTorch (not used in any lib.rs module)
#   linfa  — ML toolkit (not used in any lib.rs module)
#   bitcoin = "0.30" — brings many deps; wallet only needs ethers for now

[features]
default = []
std     = ["serde/std", "tokio/full"]
ml      = []
