[package]
name    = "bleep-zkp"
version = "0.2.0"
edition = "2021"
description = "BLEEP ZK proof system — Groth16/BLS12-381 block validity circuit, batch tx aggregation"

[dependencies]
ark-bls12-381  = "0.4"
ark-std        = "0.4"
ark-ff         = "0.4"
ark-ec         = "0.4"
ark-relations  = "0.4"
ark-groth16    = "0.4"
ark-snark      = "0.4"
ark-serialize  = "0.4"
ark-r1cs-std   = "0.4"
serde          = { version = "1.0", features = ["derive"] }
rand           = "0.8"
sha3           = "0.10.8"
