[package]
name = "bleep-crypto-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bleep-crypto  = { path = ".." }

[[bin]]
name = "fuzz_hash_input"
path = "fuzz_targets/fuzz_hash_input.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_sphincs_sign_verify"
path = "fuzz_targets/fuzz_sphincs_sign_verify.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_kyber_encap_decap"
path = "fuzz_targets/fuzz_kyber_encap_decap.rs"
test = false
doc  = false
