[package]
name    = "bleep-connect-adapters"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bleep-connect-types  = { path = "../bleep-connect-types" }
bleep-connect-crypto = { path = "../bleep-connect-crypto" }
async-trait = "0.1.77"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
sha2        = "0.10.8"
sha3        = "0.10.8"
hex         = "0.4.3"
tracing     = "0.1"
thiserror   = "1.0"
