[package]
name    = "bleep-connect-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bleep-connect-types            = { path = "../bleep-connect-types" }
bleep-connect-crypto           = { path = "../bleep-connect-crypto" }
bleep-connect-commitment-chain = { path = "../bleep-connect-commitment-chain" }
bleep-connect-layer1-social    = { path = "../bleep-connect-layer1-social" }
bleep-connect-layer2-fullnode  = { path = "../bleep-connect-layer2-fullnode" }
bleep-connect-layer3-zkproof   = { path = "../bleep-connect-layer3-zkproof" }
bleep-connect-layer4-instant   = { path = "../bleep-connect-layer4-instant" }
bleep-connect-adapters         = { path = "../bleep-connect-adapters" }
bleep-connect-executor         = { path = "../bleep-connect-executor" }
tokio      = { version = "1.36", features = ["full"] }
dashmap    = "5.5"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing    = "0.1"
hex        = "0.4.3"
thiserror  = "1.0"
bincode    = "1.3.3"
