[package]
name    = "bleep-connect-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
pqcrypto-kyber = "0.8.0"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits      = "0.3"
ed25519-dalek        = "2.1.1"
sha2                 = "0.10.8"
sha3                 = "0.10.8"
blake2               = "0.10.6"
aes-gcm              = "0.10.3"
hkdf                 = "0.12.4"
rand                 = "0.8"
hex                  = "0.4.3"
zeroize              = { version = "1.7", features = ["zeroize_derive"] }
thiserror            = "1.0"
serde                = { version = "1.0", features = ["derive"] }
