[package]
name    = "bleep-connect-layer3-zkproof"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bleep-connect-types            = { path = "../bleep-connect-types" }
bleep-connect-crypto           = { path = "../bleep-connect-crypto" }
bleep-connect-commitment-chain = { path = "../bleep-connect-commitment-chain" }
tokio     = { version = "1.36", features = ["full"] }
dashmap   = "5.5"
serde     = { version = "1.0", features = ["derive"] }
tracing   = "0.1"
hex       = "0.4.3"
thiserror = "1.0"
sha2      = "0.10.8"
ark-ff                = "0.4.0"
ark-ec                = "0.4.0"
ark-std               = "0.4.0"
ark-serialize         = "0.4.0"
ark-relations         = "0.4.0"
ark-groth16           = "0.4.0"
ark-bls12-381         = "0.4.0"
ark-r1cs-std          = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-snark             = "0.4.0"
